--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-# docker-compose.yml
-
 version: '3'
 services:
   app:
@@ -7,10 +5,9 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "5000:5000"
+      - "5000:80"  # Update the port mapping to use port 80
     environment:
-      FLASK_ENV: production
-      SECRET_KEY: secretkey
+      FLASK_ENV: ${FLASK_ENV}
     volumes:
       - .:/app  # Mount the current directory to /app in the container
   nginx:
