--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    image: data-multivector-image:1.0  # Specify the image name and tag
     ports:
       - "5000:80"  # Update the port mapping to use port 80
     environment:
