--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,17 +4,17 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: data-multivector-image:1.0  # Specify the image name and tag
+    image: data-multivector-image:1.0
     ports:
-      - "5000:80"  # Update the port mapping to use port 80
+      - "5000:80"
     environment:
       FLASK_ENV: ${FLASK_ENV}
     volumes:
-      - .:/app  # Mount the current directory to /app in the container
+      - .:/app
+
   nginx:
     image: nginx:latest
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - .:/app  # Mount the current directory to /app in the container
+      - /home/user/github/Data-MultiVector/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "80:80"
