--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,21 @@ services:
     environment:
       FLASK_ENV: ${FLASK_ENV}
     volumes:
-      - .:/app
+      - app-data:/app
+    networks:
+      - data-multivector-network
 
   nginx:
     image: nginx:latest
     volumes:
-      - /home/user/github/Data-MultiVector/:/etc/nginx/conf.d/default.conf
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "80:80"
+    networks:
+      - data-multivector-network
+
+networks:
+  data-multivector-network:
+
+volumes:
+  app-data:
