--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,25 +8,13 @@ services:
     ports:
       - "5000:5000"
     environment:
-      FLASK_ENV: development        # Flask configuration
-      SECRET_KEY: 123!z2           # Secret key for Flask
-      
-      UID: 1000                     # User ID for permissions in the container
-      GID: 1000                     # Group ID for permissions in the container
-      
-      DB_HOST: localhost            # MySQL Database host
-      DB_PORT: 3306                 # MySQL Database port
-      DB_USER: ansible              # MySQL Database username
-      DB_PASSWORD: 123!z2           # MySQL Database password
-      DB_NAME: data-multivector     # MySQL Database name
-      
-      INPUT_PATHS: /home/ansible/.ssh/known_hosts,/home/ansible/testing    # Input paths
-      OUTPUT_PATHS: /home/ansible/testdir/                                # Output paths
-      
-      # Other configuration can be added here
+      FLASK_ENV: development
+      SECRET_KEY: 123!z2
+      UID: 1000
+      GID: 1000
     volumes:
       - multivector-app-data:/app
-    user: "${UID}:${GID}"
+    user: "${UID}:${GID}"  # Use the UID and GID environment variables
     networks:
       - data-multivector-network
 
