--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,21 @@
 server {
-    listen       80;
-    server_name  localhost;
+    listen 80;
+    server_name datamultivector.curtisalfrey.com;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name datamultivector.curtisalfrey.com;
+
+    ssl_certificate /path/to/your/certificate.crt;
+    ssl_certificate_key /path/to/your/private.key;
 
     location / {
-        proxy_pass http://app:5000;
+        proxy_pass http://app:5000;  # Use the service name defined in your docker-compose.yml
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    location /static {
-        alias /app/static;
-    }
-
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
