--- a/nginx.conf
+++ b/nginx.conf
@@ -8,11 +8,11 @@ server {
     listen 443 ssl;
     server_name datamultivector.curtisalfrey.com;
 
-    ssl_certificate /path/to/your/certificate.crt;
-    ssl_certificate_key /path/to/your/private.key;
+    ssl_certificate /home/ansible/github/ssl-cert-curtisalfrey.com/curtisalfrey.com;  # Correct path
+    ssl_certificate_key /home/ansible/github/ssl-cert-curtisalfrey.com/curtisalfrey.com;  # Correct path
 
     location / {
-        proxy_pass http://app:5000;  # Use the service name defined in your docker-compose.yml
+        proxy_pass http://app:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
