--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,15 @@
 server {
     listen 80;
-    server_name datamultivector.example.com;
+    server_name datamultivector.curtisalfrey.com;
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name datamultivector.example.com;
+    server_name datamultivector.curtisalfrey.com;
 
-    ssl_certificate /app/certificate.crt;  # Path to your generated certificate.crt
-    ssl_certificate_key /app/private.key;  # Path to your generated private.key
+    ssl_certificate /etc/nginx/conf.d/ssl-cert-curtisalfrey.com/certificate.crt;
+    ssl_certificate_key /etc/nginx/conf.d/ssl-cert-curtisalfrey.com/private.key;
 
     location / {
         proxy_pass http://app:5000;
