--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,25 @@
 version: '3'
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
     image: data-multivector-image:1.0
     ports:
       - "5000:5000"
     environment:
-      FLASK_ENV: development
-      SECRET_KEY: 123!z2
+      FLASK_ENV: development                                    # development or production
+      SECRET_KEY: 123!z2                                        # change me
     volumes:
       - multivector-app-data:/app
+    user: "1000:1000"                                           #set user ID
     networks:
       - data-multivector-network
 
   nginx:
     image: nginx:latest
     volumes:
-      - /path/to/ssl/cert/files:/etc/nginx/conf.d/ssl-cert
+      - /path/to/ssl/cert/files:/etc/nginx/conf.d/ssl-cert      # enter all your data into, and then set path to nginx.conf
       - multivector-app-data:/app
     ports:
-      - "6443:6443"  # Use port 6443 for HTTPS
+      - "6443:6443"                                             # set port that you want to use (same as the ngnix.conf)
     networks:
       - data-multivector-network
 
