--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name datamultivector.curtisalfrey.com;
+    server_name datamultivector.example.com;
     return 301 https://$host$request_uri;
 }
 
@@ -8,8 +8,8 @@ server {
     listen 443 ssl;
     server_name datamultivector.curtisalfrey.com;
 
-    ssl_certificate /etc/nginx/conf.d/ssl-cert-curtisalfrey.com/certificate.crt;
-    ssl_certificate_key /etc/nginx/conf.d/ssl-cert-curtisalfrey.com/private.key;
+    ssl_certificate /path/to/certificate.crt;
+    ssl_certificate_key /path/to/private.key;
 
     location / {
         proxy_pass http://app:5000;
