--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name datamultivector.curtisalfrey.com;
+    server_name datamultivector.example.com;
 
     ssl_certificate /path/to/certificate.crt;
     ssl_certificate_key /path/to/private.key;
