--- a/nginx.conf
+++ b/nginx.conf
@@ -1,21 +1,24 @@
-server {
-    listen 80;
-    server_name datamultivector.example.com;
-    return 301 https://$host$request_uri;
-}
+# http block
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-server {
-    listen 443 ssl;
-    server_name datamultivector.example.com;
+    server {
+        listen 443 ssl;
+        server_name data-multivector.example.com;
 
-    ssl_certificate /path/to/certificate.crt;
-    ssl_certificate_key /path/to/private.key;
+        ssl_certificate /etc/nginx/example.com.pem;
+        ssl_certificate_key /etc/nginx/example.com.pem;
 
-    location / {
-        proxy_pass http://app:5000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        location / {
+            proxy_pass http://app:5000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Include security-related configurations
+        #include /etc/nginx/conf.d/security.conf;     #to include,delete the # in front of include,add security.conf to host dir and add in yml 
     }
 }
