--- a/nginx.conf
+++ b/nginx.conf
@@ -5,10 +5,10 @@ http {
 
     server {
         listen 443 ssl;
-        server_name data-multivector.example.com;
+        server_name data-multivector.curtisalfrey.com;
 
-        ssl_certificate /etc/nginx/example.com.pem;
-        ssl_certificate_key /etc/nginx/example.com.pem;
+        ssl_certificate /etc/nginx/curtisalfrey.com.pem;
+        ssl_certificate_key /etc/nginx/curtisalfrey.com.pem;
 
         location / {
             proxy_pass http://app:5000;
@@ -19,6 +19,6 @@ http {
         }
 
         # Include security-related configurations
-        #include /etc/nginx/conf.d/security.conf;     #to include,delete the # in front of include,add security.conf to host dir and add in yml 
+        #include /etc/nginx/conf.d/security.conf;  #to include,delete the # in front of include,add security.conf to host dir and add in yml 
     }
 }
