--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     ports:
       - "5000:5000"
     environment:
-      FLASK_ENV: development                                    # development or production
-      SECRET_KEY: 123                                           # change me
+      FLASK_ENV: development
+      SECRET_KEY: 123!z2
     volumes:
       - multivector-app-data:/app
-    user: "1000:1000"                                           #set user ID
+    user: "1000:1000"
     networks:
       - data-multivector-network
     healthcheck:
@@ -18,16 +18,16 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
-      
+
   nginx:
     image: nginx:latest
     volumes:
-      - /path/to/nginx.conf:/etc/nginx/nginx.conf               # enter all your data into, and then set path to nginx.conf
-#      - /path/to/security.conf:/etc/nginx/conf.d/security.conf # remove # in front of - if you want security and update nginx.conf as well 
-      - /path/to/ssl/cert/files:/etc/nginx/ssl-cert             # enter host location of ssl pem (.crt .key)
+      - /home/ansible/github/my-run-files/nginx.conf:/etc/nginx/nginx.conf
+      - /home/ansible/github/my-run-files/security.conf:/etc/nginx/conf.d/security.conf
+      - /home/ansible/github/my-run-files/curtisalfrey.com.pem:/etc/nginx/curtisalfrey.com.pem
       - multivector-app-data:/app
     ports:
-      - "443:443"                                             # set port that you want to use (same as the ngnix.conf)
+      - "443:443"
     networks:
       - data-multivector-network
     healthcheck:
@@ -36,7 +36,7 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
-      
+
 networks:
   data-multivector-network:
     name: data-multivector-network
@@ -44,3 +44,4 @@ networks:
 volumes:
   multivector-app-data:
     name: multivector-app-data
+
