--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
     environment:
       FLASK_ENV: development
       SECRET_KEY: 123!z2
+      SQLALCHEMY_DATABASE_URI: mysql://username:password@mysql/db_name
+      MAIL_SERVER: smtp.example.com
+      MAIL_USERNAME: your_email@example.com
+      MAIL_PASSWORD: your_email_password
     volumes:
       - multivector-app-data:/app
     user: "1000:1000"
@@ -18,6 +22,18 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
+
+  mysql:
+    image: mysql:8.0
+    environment:
+      - MYSQL_ROOT_PASSWORD: root_password
+      - MYSQL_DATABASE: db_name
+      - MYSQL_USER: username
+      - MYSQL_PASSWORD: password
+    volumes:
+      - mysql_data:/var/lib/mysql
+    networks:
+      - data-multivector-network
 
   nginx:
     image: nginx:latest
@@ -44,4 +60,5 @@ networks:
 volumes:
   multivector-app-data:
     name: multivector-app-data
-
+  mysql_data:
+    name: mysql-data
